update install doc to show how to add-opens